# Enterprise_Knowledge_Assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/main_app/: embed_file.py  generate_text.py  urls.py  views.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: Message.jsx  Upload.jsx  chat.jsx
