[project]
name = "Enterprise_Knowledge_Assistant"
version = "0.0.1"
description = "A sample Python project which works like a internal chatgpt for the employees."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "HariKandregula", email = "i_will_add.email@example.com" }
]

dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]